@startuml class
abstract class JFrame

class ChangeNameWindow{
    + textFieldUsername : JTextField
    + ButtonChange : JButton
}
class ChatWindow{
    + remoteUserList : JList<UserID>
    + ButtonChangeName : JButton
    + ButtonSend : JButton
    + ButtonSendFile : JButton
    + ButtonExit : JButton
    + message_history : JTextArea
    + message : JTextArea
}
class ConnectWindow{

    + textFieldUsername : JTextField
    + textFieldURL : JTextField
    + textFieldDatabase : JTextField
    + textFieldPasswordDB : JTextField
    + textFieldID : JTextField
    + textFieldPassword : JTextField
    + chckbxUseCentralizedHistory : JCheckBox
    + rdbtnSignIn : JRadioButton
    + rdbtnSignUp : JRadioButton
    + ButtonExit : JButton
    + ButtonConnect : JButton
}

class DDC_deamon{
    + void run()
}

abstract class DistributedDataController{
    - ddc_deamon : DDC_deamon
    - user_list : ArrayList<UserID>
    -void sendUPDBroadcast(String )
    +void start_deamon()
    +UserList getConnectedUserList()
    +void notifyUsers()
    +void notifyNewName(UserID User,string Login)
}

abstract class  RemoteDatabaseController{
    - database_ip_address : String 
    -void sendSQLRequest(String SQL_request)
    +message[] retrieveHistory(UserID User)
    +void updateHistory(UserID User, message Message)
}


class CSC_deamon{
    + void run()
}


class ChattingSession{
    - conversation : String
    - other_user : UserID
    - socket : Socket
    - output : PrintWriter
    - input : BufferedReader
    + void send(String M)
    + void run()
    + String getConversation()
    + UserID getID()
}

abstract class ChattingSessionController{
    - csc_deamon : CSC_deamon
    - chat_list : ArrayList<ChattingSession>
    +void start_deamon()
    +result newChat(String name)
    +result closeChat(String name)
    +ArrayList<ChattingSession> getChatList()
    +result sendMessage(String content, String name)
}

abstract class MainController{
    +username : String
    +unique_id : String
    +result useDatabaseSignUp(String db_URL, String db_name, \nString db_password, String Name, String Password)
    +result useDatabaseSignIn(String db_URL, String db_name, \nString db_password, String Name, String id, String Password)
}

class ChattingSession {
    - other_user : UserID
    - socket : Socket
    + void send(String content)
    + void run()
}

class Message{
    time : TimeStamp
    content : String
    sender : String
}

class UserID{
    -username : String
    -database_id : String
    -IP : InetAddress
    +String getUsername()
    +String getDB_ID()
    +String setDB_ID()
    +InetAddress getIP()
} 

class Launcher



ChatWindow -r-|> JFrame
ChangeNameWindow -u-|> JFrame
ConnectWindow -d-|> JFrame

Launcher -u- "1" ConnectWindow

DDC_deamon -l-|> Thread
CSC_deamon -r-|> Thread
ChattingSession -d-|> Thread

ChattingSessionController - "1" CSC_deamon
ChattingSessionController -- "0..*" ChattingSession

DistributedDataController -u- "1" DDC_deamon

DistributedDataController - MainController
RemoteDatabaseController -d- MainController


@enduml